# kroma-sp1-witness-gen

./: .gitignore  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: ci.yml  docker-build.yml
cache/: solidity-files-cache.json
chain_configs/11155420/: chain_config.json
chain_configs/2358/: chain_config.json
chain_configs/255/: chain_config.json
chain_configs/7791/: chain_config.json
common/: Cargo.toml  build.rs
common/src/: checker.rs  db.rs  deps_version.rs  lib.rs  task_info.rs  test_ctx.rs  version.rs
configs/2358/: rollup.json
configs/255/: rollup.json
configs/7791/: rollup.json
docker/: Dockerfile.witnessgen.ubuntu
integration-tests/: Cargo.toml
integration-tests/src/: client.rs  lib.rs
native_host_runner/: Cargo.toml
program/: Cargo.toml
program/src/: main.rs  utils.rs
prover/: Cargo.toml  build.rs
prover-proxy/: Cargo.toml
prover-proxy/src/: interface.rs  lib.rs  proof_db.rs  types.rs  utils.rs
prover/src/: deps_version.rs  errors.rs  get_proof_impl.rs  interface.rs  lib.rs  proof_db.rs  request_prove_impl.rs  spec_impl.rs  types.rs  utils.rs
script/: Cargo.toml  build.rs
script/src/: lib.rs  main.rs  utils.rs
utils/: Cargo.toml  build.rs
utils/src/: db.rs  errors.rs  lib.rs  utils.rs
witnessgen/: Cargo.toml  build.rs
witnessgen/src/: checker.rs  db.rs  errors.rs  executor.rs  get_witness_impl.rs  interface.rs  lib.rs  request_witness_impl.rs  spec_impl.rs  task_info.rs  types.rs  utils.rs  version.rs  witness_db.rs
witnessgen/src/interface/: methods.rs
witnessgen/tests/: client.rs  server.rs
