[workspace]
members = [
    "program",
    "script",
    "witnessgen",
    "common",
    "prover-proxy",
    "integration-tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["dongchangYoo"]
repository = "https://github.com/kroma-network/kroma-sp1-prover"
homepage = "https://github.com/kroma-network/kroma-sp1-prover"

[workspace.dependencies]
anyhow = { version = "1.0.86", default-features = false }
bincode = "1.3.3"
cargo_metadata = "0.18.1"
cfg-if = "1.0.0"
clap = { version = "4.5.9", features = ["derive", "env"] }
csv = "1.3.0"
dotenv = "0.15.0"
hex = "0.4"
serde_json = { version = "1.0.117", default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.22"

# servers
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
once_cell = "1.20.1"
reqwest = "0.12.7"
serde = { version = "1.0.198", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# ethereum
alloy = { version = "0.6.4", default-features = false, features = ["full"] }
alloy-consensus = { version = "0.6.4", default-features = false }
alloy-eips = { version = "0.6.4", default-features = false }
alloy-primitives = { version = "0.8.12", default-features = false, features = [
    "sha3-keccak",
] }
alloy-provider = { version = "0.6.4", default-features = false }
alloy-rlp = { version = "0.3.9", default-features = false }

# optimism
op-alloy-consensus = { version = "0.6.8", default-features = false }
op-alloy-genesis = { version = "0.6.8", default-features = false, features = [
    "serde",
] }
op-alloy-protocol = { version = "0.6.8", default-features = false }
op-alloy-rpc-types-engine = { version = "0.6.8", default-features = false }

# kona
# `kroma-patch-01-23` is based on the following commit:
# - repo: https://github.com/succinctlabs/kona/branch/patch-kona-proof-v0.1.0 (commit: 8ec836eae1cfe2ebad4624ae4f29839011382425)
kona-executor = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23" }
kona-client = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23" }
kona-host = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23" }
kona-derive = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23" }
kona-mpt = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23" }
kona-proof = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23" }
kona-driver = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23" }
kona-preimage = { git = "https://github.com/kroma-network/kona", branch = "kroma-patch-01-23", features = [
    "rkyv",
] }

# sp1
sp1-zkvm = { version = "4.0.1", features = ["verify"] }
sp1-sdk = { version = "4.0.1", features = ["network"] }
sp1-build = { version = "4.0.1" }

# op-succinct
# op-succinct-client-utils = { git = "https://github.com/kroma-network/op-succinct", branch = "kroma-patch-01-23" }
# op-succinct-host-utils = { git = "https://github.com/kroma-network/op-succinct", branch = "kroma-patch-01-23" }
op-succinct-client-utils = { path = "../op-succinct/utils/client" }
op-succinct-host-utils = { path = "../op-succinct/utils/host" }

# kroma
kroma-common = { path = "common" }
kroma-witnessgen = { path = "witnessgen" }
kroma-prover-proxy = { path = "prover-proxy" }

[profile.release-client-lto] # kroma
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.dev]
incremental = true

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", branch = "patch-ecdsa-v0.16.8" }
bn = { git = "https://github.com/0xWOLAND/bn.git", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
