[workspace]
members = ["program", "script", "witnessgen", "native_host_runner"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.2.0"
license = "MIT"
authors = ["Ethan Yoo"]

[workspace.dependencies]
anyhow = { version = "1.0.86", default-features = false }
bincode = "1.3.3"
cargo_metadata = "0.18.1"
cfg-if = "1.0.0"
clap = { version = "4.5.9", features = ["derive", "env"] }
csv = "1.3.0"
dotenv = "0.15.0"
hex = "0.4"
serde_json = { version = "1.0.117", default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.22"

# servers
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
once_cell = "1.20.1"
reqwest = "0.12.7"
serde = { version = "1.0.198", features = ["derive"] }

# program tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# ethreum
alloy = { git = "https://github.com/kroma-network/alloy", default-features = false, features = [
    "full",
], branch = "feat/support-pectra" }
alloy-consensus = { git = "https://github.com/kroma-network/alloy", default-features = false, branch = "feat/support-pectra" }
alloy-eips = { git = "https://github.com/kroma-network/alloy", default-features = false, branch = "feat/support-pectra" }
alloy-primitives = { version = "0.8.12", default-features = false, features = [
    "sha3-keccak",
] }
alloy-rlp = { version = "0.3.8", default-features = false }

# optimism
op-alloy-consensus = { git = "https://github.com/kroma-network/op-alloy", default-features = false, branch = "feat/support-pectra" }
op-alloy-genesis = { git = "https://github.com/kroma-network/op-alloy", default-features = false, features = [
    "serde",
], branch = "feat/support-pectra" }
op-alloy-protocol = { git = "https://github.com/kroma-network/op-alloy", default-features = false, branch = "feat/support-pectra" }

# kona
kona-executor = { git = "https://github.com/kroma-network/kona", branch = "feat/support-pectra" }
kona-client = { git = "https://github.com/kroma-network/kona", branch = "feat/support-pectra" }
kona-host = { git = "https://github.com/kroma-network/kona", branch = "feat/support-pectra" }
kona-derive = { git = "https://github.com/kroma-network/kona", branch = "feat/support-pectra" }
kona-mpt = { git = "https://github.com/kroma-network/kona", branch = "feat/support-pectra" }
kona-proof = { git = "https://github.com/kroma-network/kona", branch = "feat/support-pectra" }

# sp1
sp1-zkvm = { version = "4.0.1", features = ["verify"] }
sp1-sdk = { version = "3.0.0" }
sp1-build = { version = "4.0.1" }

# op-succinct
op-succinct-client-utils = { git = "https://github.com/kroma-network/op-succinct", branch = "feat/support-pectra" }
op-succinct-host-utils = { git = "https://github.com/kroma-network/op-succinct", branch = "feat/support-pectra" }

# kroma
kroma-zkvm-common = { git = "https://github.com/kroma-network/zkvm-common", branch = "feat/release-v1.0.0" }
kroma-witnessgen = { path = "witnessgen" }

[profile.release-client-lto] # kroma
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.dev]
incremental = true

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", tag = "patch-0.16.9-sp1-4.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
