[package]
name = "kroma-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
rocksdb.workspace = true
serde.workspace = true
tracing.workspace = true

# json rpc
jsonrpc-http-server.workspace = true

# ethereum
alloy-primitives.workspace = true

[dev-dependencies]
ctor = "0.2"
once_cell.workspace = true
