[package]
name = "kroma-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
dotenv.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
once_cell.workspace = true

sp1-sdk.workspace = true

op-succinct-host-utils.workspace = true

# json rpc
jsonrpc-http-server.workspace = true

# ethereum
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

[dev-dependencies]
ctor = "0.2"
once_cell.workspace = true
tokio.workspace = true
