[package]
name = "integration-tests"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "witness-scenario"
path = "bin/witness_scenario.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
jsonrpsee-core = "0.16.2"
jsonrpsee = { version = "0.16.2", features = ["full"] }
log.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true
serde_json.workspace = true
serde.workspace = true

alloy-primitives.workspace = true
sp1-sdk.workspace = true
kroma-witnessgen.workspace = true
