
[package]
name = "kroma-native-host-runner"
version = "1.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "native_host_runner"
path = "src/native_host_runner.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

# kona
kona-host = { workspace = true }
