[package]
name = "fault-proof"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cfg-if.workspace = true
serde_json.workspace = true
log.workspace = true

# ethereum
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

# optimism
op-alloy-consensus.workspace = true
op-alloy-genesis.workspace = true

# kona
kona-executor.workspace = true
kona-proof.workspace = true
kona-derive.workspace = true
kona-mpt.workspace = true

# sp1
sp1-zkvm = { workspace = true }

# op-succinct
op-succinct-client-utils.workspace = true

[features]
default = ["kroma"]
kroma = []
