[package]
name = "kroma-prover-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "prover-proxy"
path = "bin/prover_proxy.rs"

[[bin]]
name = "prover_client"
path = "bin/prover_client.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
dotenv.workspace = true
hex.workspace = true
once_cell.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# ethereum
alloy-primitives.workspace = true

# sp1
sp1-sdk.workspace = true

# jsonrpc
jsonrpc-core.workspace = true
jsonrpc-core-client.workspace = true
jsonrpc-derive.workspace = true
jsonrpc-http-server.workspace = true

## jsonrpc client
jsonrpsee-core = "0.16.2"
jsonrpsee = { version = "0.16.2", features = ["full"] }

# kroma
kroma-common.workspace = true
kroma-witnessgen.workspace = true
