[package]
name = "kroma-prover"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "prover"
path = "bin/prover_server.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenv.workspace = true
once_cell.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# ethereum
alloy-primitives.workspace = true

# sp1
sp1-sdk.workspace = true

# jsonrpc
jsonrpc-core.workspace = true
jsonrpc-core-client.workspace = true
jsonrpc-derive.workspace = true
jsonrpc-http-server.workspace = true

# kroma
kroma-utils.workspace = true
