[package]
name = "script"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
clap.workspace = true
csv.workspace = true
dotenv.workspace = true
serde_json.workspace = true
tokio.workspace = true

# ethreum
alloy-primitives.workspace = true
alloy-provider.workspace = true

# sp1
sp1-sdk.workspace = true

# op-succinct
op-succinct-host-utils.workspace = true
op-succinct-client-utils.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
cfg-if.workspace = true
sp1-build.workspace = true

[features]
kroma = []
