[package]
name = "script"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "script_execute"
path = "bin/execute.rs"

[[bin]]
name = "script_native_host"
path = "bin/native_host.rs"

[[bin]]
name = "script_preview"
path = "bin/preview.rs"

[[bin]]
name = "script_rollup_config"
path = "bin/rollup_config.rs"

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
clap.workspace = true
csv.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# ethreum
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true

# sp1
sp1-sdk.workspace = true

# op-succinct
op-succinct-host-utils.workspace = true
op-succinct-client-utils.workspace = true

kona-host.workspace = true

kroma-witnessgen.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
cfg-if.workspace = true
sp1-build.workspace = true

[features]
default = ["kroma"]
kroma = []
