[package]
name = "kroma-witnessgen"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "native_host_runner"
path = "bin/native_host_runner.rs"

[[bin]]
name = "witness-gen-server"
path = "bin/witness_gen_server.rs"

[[bin]]
name = "witness-gen-client"
path = "bin/witness_gen_client.rs"

[dependencies]
kona-host = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

# succinct
op-succinct-host-utils = { workspace = true }

# server
alloy-primitives.workspace = true
bincode.workspace = true
dotenv.workspace = true
jsonrpc-http-server.workspace = true
jsonrpc-core.workspace = true
jsonrpc-core-client.workspace = true
jsonrpc-derive.workspace = true
hex = { workspace = true }
once_cell.workspace = true
serde.workspace = true
sp1-sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# client
jsonrpsee-core = "0.16.2"
jsonrpsee = { version = "0.16.2", features = ["full"] }

# kroma
kroma-utils.workspace = true

[dev-dependencies]
ctor = "0.2"
