[package]
name = "kroma-witnessgen"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "witness-gen-server"
path = "bin/witness_gen_server.rs"

[dependencies]
anyhow = { workspace = true }
bincode.workspace = true
clap = { workspace = true }
dotenv.workspace = true
hex.workspace = true
jsonrpc-core.workspace = true
jsonrpc-core-client.workspace = true
jsonrpc-derive.workspace = true
jsonrpc-http-server.workspace = true
jsonrpsee = { version = "0.16.2", features = ["full"] }
jsonrpsee-core = "0.16.2"
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# succinct
op-succinct-host-utils = { workspace = true }

# sp1
sp1-sdk.workspace = true

# kroma
kroma-zkvm-common.workspace = true

# kona
kona-host.workspace = true

[dev-dependencies]
ctor = "0.2"
cargo_metadata.workspace = true
sysinfo = "0.32.0"

[build-dependencies]
cargo_metadata.workspace = true
cfg-if.workspace = true
sp1-build.workspace = true

[features]
default = ["kroma"]
kroma = []
docker = []
